fix: Fix Update available message not showing

--- a/src/components/topmenu/style.scss
+++ b/src/components/topmenu/style.scss
@@ -55,6 +55,10 @@
 					background-color: #fff;
 					color: #007a5a;
 				}
+
+				&.hidden {
+					display: none;
+				}
 			}
 		}
 	}
